# aiseg2-influxdb2-forwarder

./: .envrc.sample  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.yml  flake.nix
.github/workflows/: rust.yml
contrib/grafana/dashboards/: dashboard.yml  status.json  total.json
contrib/grafana/datasources/: datasource.yml
nix/: grafana.ini
src/: circuit_breaker.rs  config.rs  error.rs  influxdb.rs  main.rs  model.rs
src/aiseg/: circuit_daily_total_metric_collector.rs  client.rs  climate_metric_collector.rs  collector_base.rs  daily_total_metric_collector.rs  helper.rs  html_parsing.rs  mod.rs  pagination.rs  parser_adapters.rs  parser_traits.rs  power_metric_collector.rs  query_builder.rs  test_helpers.rs  test_utils.rs
src/aiseg/collectors/: climate_collector.rs  mod.rs  power_collector.rs  power_collector_trait_example.rs  trait_usage_example.rs
src/aiseg/metrics/: climate.rs  mod.rs  power.rs
src/aiseg/parsers/: climate_parser.rs  mod.rs  power_parser.rs
src/collector/: circuit_protected.rs  mod.rs
src/model/: metrics.rs  mod.rs  traits.rs  types.rs  utilities.rs
src/test_utils/: builders.rs  config.rs  fixtures.rs  html.rs  mocks.rs  mod.rs
src/test_utils/mocks/: collectors.rs
